test/tests/compiler/18_structures/invalid_lex/plx1_import_m4.plx
import "magic_define"

pub fn main(none) i32 {
    return MAGIC_VAL
}
